Assignments/RestaurantSite/styles/restaurantStyles.css
/*
Creator: Max Gubler
Date Created: October 22, 2018
Last Modified: October 23, 2018
*/

html, body {
    height: 100%;
}

body {
    background-image: url('/images/bg-1920w.jpg');
    background-position: center;
    background-size: 1920px;
    background-repeat: repeat-y;
}

header {
    background-color: #FFFFFF;
    box-shadow: 0 1px 10px -2px #949494;
    position: relative;
    z-index: 999;
}

header h1 {
    font-family: 'Mr Dafoe', cursive;
}

.navbar-light .navbar-toggler {
    border-color: #F4CF3B;
}

.nav-pills .nav-link {
    border: 1px solid #F4CF3B;
    color: #333333;
    min-width: 7em;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
    background-color: #FFFBE9;
}

.carousel {
    background-color: #E95A4F;
    min-height: 720px;
}

.carouselSide {
    background-image: url('https://via.placeholder.com/720x720');
    background-position: center;
    min-height: 720px;
}

.jumbotron {
    padding: 0;
    border-radius: 0 0 0.3rem 0.3rem;
    background-color: #FFFFFF;
    border-left: 1px solid #F4CF3B;
    border-right: 1px solid #F4CF3B;
}

.jumbotron .row div {
    border-bottom: 1px solid #F4CF3B;
    padding: 0.5em;
}

.jumbotron .row > div:nth-child(1) {
    border-radius: 0 0 0 0.3rem;
}

.jumbotron .row > div:nth-last-child(1) {
    border-radius: 0 0 0.3rem 0;
}

.jumbotron p {
    margin: 0;
}

.jumbotron .display-4 {
    font-size: 2.5em;
}

